背景画像が取れない時に背景に色がつくように変更

--- a/docs/assets/sass/style.scss
+++ b/docs/assets/sass/style.scss
@@ -16,13 +16,14 @@ html, body {
 
 body {
   overflow: hidden;
+
 }
 
 .spbg {
   display: none;
     @media screen and(max-width: 560px) {
       //opacity: .3;
-      background: url("http://img.youtube.com/vi/luF7YxEqLUM/maxresdefault.jpg") center center no-repeat;
+      background: url("http://img.youtube.com/vi/luF7YxEqLUM/maxresdefault.jpg") center center no-repeat #e0e0e0;
       background-size: auto 100%;
       display: block;
       position: fixed;
