--- a/docs/assets/sass/style.scss
+++ b/docs/assets/sass/style.scss
@@ -23,7 +23,7 @@ body {
   display: none;
     @media screen and(max-width: 560px) {
       //opacity: .3;
-      background: url("http://img.youtube.com/vi/luF7YxEqLUM/maxresdefault.jpg") center center no-repeat #e0e0e0;
+      background: url("//img.youtube.com/vi/luF7YxEqLUM/maxresdefault.jpg") center center no-repeat #e0e0e0;
       background-size: auto 100%;
       display: block;
       position: fixed;
